--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     container_name: "pgbouncer"
     environment:
       - DATABASE_URL=postgres://postgres:123456@db:5432/postgres
-      - POOL_MODE=transaction
+      - POOL_MODE=session
       - MAX_DB_CONNECTIONS=100
       - DEFAULT_POOL_SIZE=40
       - AUTH_TYPE=scram-sha-256
