feat: 用户登录失败后自动锁定用户

--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
+            <artifactId>flyway-database-postgresql</artifactId>
         </dependency>
 
         <dependency>
@@ -225,6 +225,7 @@
                     <url>jdbc:postgresql://127.0.0.1:5432/postgres</url>
                     <user>postgres</user>
                     <password>123456</password>
+                    <baselineOnMigrate>true</baselineOnMigrate>
                 </configuration>
             </plugin>
 
