--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 	implementation 'com.github.ben-manes.caffeine:caffeine'
 	implementation 'cn.hutool:hutool-crypto:5.8.28'
 	implementation 'org.yaml:snakeyaml:2.2'
-	implementation 'org.flywaydb:flyway-core:10.15.2'
+	implementation 'org.flywaydb:flyway-database-postgresql:10.15.2'
 	implementation 'com.cronutils:cron-utils:9.2.1'
 	implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
 	implementation 'com.lmax:disruptor:4.0.0'
@@ -71,6 +71,8 @@ flyway {
 	url = 'jdbc:postgresql://127.0.0.1:5432/postgres'
 	user = 'postgres'
 	password = '123456'
+	baselineOnMigrate = true
+	skipExecutingMigrations = true
 }
 
 tasks.named('test') {
