--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
@@ -36,6 +38,8 @@ jobs:
           tags: |
             ghcr.io/damingerdai/hoteler:${{ github.sha }}
           push: ${{ github.ref == 'refs/heads/master' }}
+          platforms: linux/amd64,linux/arm64
+          provenance: true
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
