--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.flywaydb.flyway' version '11.1.1'
 	id 'java'
+	id 'checkstyle'
 }
 
 group = 'org.daming'
