--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
           CI: true
       - name: Unit Test with Maven
         # run: ./gradlew flywayMigrate && ./gradlew build
-        run: ./mvnw test && ./mvnw surefire-report:report-only
+        run: ./mvnw test -Dcheckstyle.skip=true && ./mvnw surefire-report:report-only
         env:
           CI: true
   build:
