--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ./mvnw package -Dmaven.test.skip=true
+        run: ./mvnw package -Dmaven.test.skip=true -Dcheckstyle.skip=true
   build-docker:
     runs-on: ubuntu-latest
     needs: [build, build-maven]
