--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -10,7 +8,7 @@
     </parent>
     <groupId>org.daming</groupId>
     <artifactId>hoteler</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>hoteler</name>
     <description>Demo project for Spring Boot</description>
 
@@ -19,9 +17,9 @@
         <kotlin.version>1.3.70</kotlin.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <changelog.version>1.100.6</changelog.version>
         <jsonwebtoken.version>0.12.6</jsonwebtoken.version>
         <jacoco.version>0.8.11</jacoco.version>
+        <changelog.version>2.2.4</changelog.version>
     </properties>
 
     <dependencies>
@@ -249,7 +247,6 @@
             </plugin>
 
             <!-- git changelog maven plugin -->
-            <!--
             <plugin>
                 <groupId>se.bjurr.gitchangelog</groupId>
                 <artifactId>git-changelog-maven-plugin</artifactId>
@@ -262,20 +259,14 @@
                             <goal>git-changelog</goal>
                         </goals>
                         <configuration>
-                            <useIntegrations>true</useIntegrations>
-                            <gitHubEnabled>trye</gitHubEnabled>
-                            <gitHubApi>https://api.github.com/repos/damingerdai/hoteler</gitHubApi>
-                            <gitHubToken>${GITHUB_OAUTH2TOKEN}</gitHubToken>
-                            <gitHubIssuePattern>#([0-9]*)</gitHubIssuePattern>
-                            <templateFile>changelog.mustache</templateFile>
+                            <toRef>refs/heads/master</toRef>
                             <readableTagName>-([^-]+?)$</readableTagName>
                             <file>CHANGELOG.md</file>
-                            <ignoreCommitsIfMessageMatches>^\[maven-release-plugin\].*</ignoreCommitsIfMessageMatches>
+<!--                            <ignoreCommitsIfMessageMatches>^\[maven-release-plugin\].*</ignoreCommitsIfMessageMatches>-->
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
     <repositories>
