--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
+  implementation 'io.micrometer:micrometer-registry-prometheus:1.14.5'
 	implementation 'com.graphql-java:graphql-java-extended-scalars:2023-01-24T02-11-56-babda5f'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 
