--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://plugins.gradle.org/m2/' }
     }
+    dependencies {
+        classpath("org.postgresql:postgresql:42.7.5")
+        classpath("org.flywaydb:flyway-database-postgresql:11.5.0")
+    }
 }
 
 plugins {
