--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,6 +9,8 @@ name: Build and Publish
 #      - 'build.gradle'
 on:
   push:
+    branches:
+      - 'master'
     tags:
       - v*
 
@@ -25,6 +27,11 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/damingerdai/hoteler
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
@@ -35,12 +42,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Extract tag name
-        id: extract_tag
-        run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
-          echo "Extracted tag name: $TAG_NAME"
-          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
 
       - name: Build image and push to GitHub Container Registry
         uses: docker/build-push-action@v6
@@ -48,10 +49,15 @@ jobs:
         with:
           context: .
           tags: |
-            ghcr.io/damingerdai/hoteler:${{ steps.extract_tag.outputs.tag_name }}
+            type=semver,pattern={{raw}}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+            type=ref,event=tag
+            type=sha
           push: ${{ github.ref == 'refs/heads/master' }}
           platforms: linux/amd64,linux/arm64
           provenance: true
+        env:
+          DOCKER_METADATA_SHORT_SHA_LENGTH: 40
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
