--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.daming</groupId>
     <artifactId>hoteler</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.0.0-SNAPSHOT</version>
     <name>hoteler</name>
     <description>Demo project for Spring Boot</description>
 
@@ -280,15 +280,10 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <tagBase>https://github.com/damingerdai/hoteler/tags</tagBase>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.14.2</version>
             </plugin>
         </plugins>
     </build>
