--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.daming</groupId>
     <artifactId>hoteler</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>hoteler</name>
     <description>Demo project for Spring Boot</description>
 
