--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,6 +9,7 @@ name: Build and Publish
 #      - 'build.gradle'
 on:
   push:
+    branches: [ master ]
     tags:
       - v*
 
@@ -55,6 +56,7 @@ jobs:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           push: ${{ github.ref == 'refs/heads/master' }}
+          load: ${{ github.ref != 'refs/heads/master' }}
           platforms: linux/amd64,linux/arm64
           provenance: true
         env:
