fix(workflows): force load Docker image in build-and-publish workflow
- Remove conditional image loading to ensure build output availability
- Always load image to Docker daemon regardless of branch
- Maintain multi-arch builds while fixing cache warning

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -56,7 +56,7 @@ jobs:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           push: ${{ github.ref == 'refs/heads/master' }}
-          load: ${{ github.ref != 'refs/heads/master' }}
+          load: true
           platforms: linux/amd64,linux/arm64
           provenance: true
         env:
