--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -55,8 +55,9 @@ jobs:
         with:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
-          push: ${{ github.ref == 'refs/heads/master' }}
-          load: true
+          # push: ${{ github.ref == 'refs/heads/master' }}
+          push: true
+          # load: true
           platforms: linux/amd64,linux/arm64
           provenance: true
         env:
