ci(build-and-publish.yml): 确保部署使用构建推送的镜像标签
在 deploy-to-kubernetes 任务中，原本尝试从 GITHUB_REF 提取标签名，\n这可能与 uild-and-push-docker-image 任务生成的镜像标签不一致。\n修改后，deploy-to-kubernetes 任务直接使用 uild-and-push-docker-image \n任务输出的镜像标签进行部署，保证了部署时使用的镜像标签和构建推送的一致。

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -65,6 +65,9 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Output image tag
+        run: echo "image_tag=$(echo ${{ steps.meta.outputs.tags }} | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+        id: output_tag
 
   deploy-to-kubernetes:
     needs: build-and-push-docker-image
@@ -82,6 +85,7 @@ jobs:
           echo "Extracted tag name: $TAG_NAME"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
       - name: Deploy to k3s
+      - name: Deploy to k3s
         run: |-
-          kubectl set image deployment/hoteler-api hoteler-api=ghcr.io/damingerdai/hoteler:${{ steps.extract_tag.outputs.tag_name }} -n hoteler-namespace
-          kubectl rollout status deployment/hoteler-api -n hoteler-namespace
+          kubectl set image deployment/hoteler-api hoteler-api=ghcr.io/damingerdai/hoteler:${{ needs.build-and-push-docker-image.outputs.image_tag }} -n hoteler-namespace
+          kubectl rollout status deployment/hoteler-api -n hoteler-namespace --timeout=10m --request-timeout=10m
