ci: correct docker load command in deployment script
- Updated the `docker load` command in the deployment script from `-o` to `-i` to fix an issue with loading the Docker image.
- Ensures proper deployment of the Docker image in the CI pipeline.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |-
             cd /root/Workspace/hoteler; \
-            docker load -o hoteler.tar; \
+            docker load -i hoteler.tar; \
             kubectl set image deployment/hoteler-api hoteler-api=hoteler:${{ github.sha }} -n hoteler-namespace \
             kubectl rollout status deployment/hoteler-api -n hoteler-namespace
