--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,19 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
+    env:
+      SHORT_SHA: ${{ github.sha:0:7 }}
     steps:
       - uses: actions/checkout@v4
       - name: Build docker
         id: build-docker
         run: |-
-          docker build . -t ${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ github.sha }} -f Dockerfile
+          docker build . -t ${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ env.SHORT_SHA }} -f Dockerfile
       - name: Image digest
         run: echo ${{ steps.build-docker.outputs.digest }}
       - name: Save docker image to tar file
         run: |
-          docker save ${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ github.sha }} -o hoteler.tar
+          docker save ${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ env.SHORT_SHA }} -o hoteler.tar
           chmod 664 hoteler.tar
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.7
@@ -33,7 +35,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           source: hoteler.tar
-          target: ${{ secrets.SERVER_TARGET_FOLDER_PATHs }}
+          target: ${{ secrets.SERVER_TARGET_FOLDER_PATHS }}
       - name: deploy by ssh
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -41,8 +43,8 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            cd /root/Workspace/hoteler \
-            docker load -i hoteler.tar \
-            kubectl set image deployment/hoteler-api hoteler-api=${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ github.sha }} -n hoteler-namespace \
+            set -e
+            cd ${{ secrets.SERVER_TARGET_FOLDER_PATHS }} &&
+            docker load -i hoteler.tar &&
+            kubectl set image deployment/hoteler-api hoteler-api=${{ env.REGISTRY_NAME }}/damingerda/hoteler-api:${{ env.SHORT_SHA }} -n hoteler-namespace &&
             kubectl rollout status deployment/hoteler-api -n hoteler-namespace
-
