ci 新增一个步骤使用 shell 语法截取 SHA 前 7 位，并注入环境变量

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-    env:
-      SHORT_SHA: ${{ github.sha:0:7 }}
     steps:
+      - name: Set short SHA
+        run: echo "SHORT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
       - uses: actions/checkout@v4
       - name: Build docker
         id: build-docker
