--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     //developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 flyway {
