fix(build): migrate Java version configuration to new Gradle DSL
- Replace deprecated direct property assignments for source/target compatibility
- Adopt modern `java {}` DSL block for JDK version configuration
- Maintain same Java 21 version for both source and target compatibility
- Keep existing group/version and repository configurations unchanged

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,12 @@ plugins {
 
 group = 'org.daming'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
-targetCompatibility = '21'
 def jsonwebtokenVersion = "0.12.6"
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21 // Or another desired Java version
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
 repositories {
     mavenLocal()
