--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ repositories {
     maven { url 'https://repo.spring.io/snapshot' }
     mavenCentral()
     maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/google' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
 }
 
 dependencies {
