--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java-version: [21]
+        java-version: [25]
         go-version: ["1.25.0"]
         os: [ubuntu-latest]
     # https://github.com/actions/example-services/blob/master/.github/workflows/postgres-service.yml
@@ -90,7 +90,7 @@ jobs:
     needs: [test]
     strategy:
       matrix:
-        java-version: [21, 25]
+        java-version:  25]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v5.0.0
@@ -115,7 +115,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        java-version: [21]
+        java-version: [25]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v5.0.0
@@ -156,7 +156,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        java-version: [21]
+        java-version: [25]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v5.0.0
