--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
     needs: [test]
     strategy:
       matrix:
-        java-version:  25]
+        java-version:  [25]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v5.0.0
