--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
           - 6379:6379
     steps:
       - uses: actions/checkout@v5.0.0
-        with:
-          submodules: recursive
+#        with:
+#          submodules: recursive
       - name: Set up JDK
         uses: actions/setup-java@v5
         with:
